[tool.poetry]
name = "pyzengin"
version = "0.1.3"
description = "Japanese Bank and Branch Code Data"
authors = ["Deyong Zheng <zhengdy@me.com>"]
packages = [
    { include = "zengin" },
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
mojimoji = "^0.0.11"

[build-system]
requires = ["setuptools"]


